--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,12 @@ dependencies = [
     "transformers[torch]"
 ]
 
+[project.scripts]
+booking-sentiment = "booking_sentiment.cli:app"
+
+[tool.uv]
+package = true
+
 [tool.uv.sources]
 torch = [
     { index = "pytorch-cu128" }
@@ -31,16 +37,3 @@ torch = [
 name = "pytorch-cu128"
 url = "https://download.pytorch.org/whl/nightly/cu128"
 explicit = true
- 
-[tool.uv]
-scripts = { 
-    "load" = "python -m booking_sentiment.cli load",
-    "clean" = "python -m booking_sentiment.cli clean",
-    "quality" = "python -m booking_sentiment.cli quality",
-    "split" = "python -m booking_sentiment.cli split",
-    "train" = "python -m booking_sentiment.cli train",
-    "eval" = "python -m booking_sentiment.cli evaluate",
-    "scan" = "python -m booking_sentiment.cli scan",
-    "explain" = "python -m booking_sentiment.cli explain",
-    "all" = "python -m booking_sentiment.cli all"
-}
